2005/02/10 22:15 (+0100) kaffeetisch

	* Gnome2.pm: Do it like all the other cool kids and alter
	dl_load_flags() to avoid warnings on Darwin.

2004/10/24 11:55 (-0400) rwmcfa1

	* MANIFEST.SKIP: updates

	* perl-Gnome2.spec.in: new scheme that addresses x86_64 problems
	found by Carl Nygard

2004/09/14 00:08 (+0200) kaffeetisch

	* t/GnomeIconList.t, t/GnomePasswordDialog.t, t/GnomeProgram.t,
	xs/Gnome2.xs, xs/GnomeIconList.xs, xs/GnomePasswordDialog.xs,
	xs/GnomeProgram.xs: Make all version checks refer to stable
	releases.

	* Gnome2.pm, NEWS: Version 1.020.

2004/08/29 20:00 (+0200) kaffeetisch

	* Gnome2.pm, NEWS: Version 1.014.

2004/08/28 13:55 (+0200) kaffeetisch

	* t/GnomePasswordDialog.t, xs/Gnome2.xs: Bind and test the newly
	added gnome_authentication_manager_dialog_is_visible.

2004/08/23 21:05 (+0200) kaffeetisch

	* MANIFEST, Makefile.PL, podifyenums.pl: Patch from Kevin
	C. Krinke adds code to generate Gnome2::enum -- a list of all enum
	and flag values.

2004/08/13 10:27 (+0200) kaffeetisch

	* Gnome2.pm, NEWS: Version 1.013.

2004/08/13 10:19 (+0200) kaffeetisch

	* t/GnomeProgram.t, xs/GnomeProgram.xs: If available, use the new
	gnome_program_init_paramv to wrap gnome_program_init properly.

2004/07/19 12:51 (+0200) kaffeetisch

	* Gnome2.pm, NEWS: Version 1.012.

2004/07/18 19:44 (+0200) kaffeetisch

	A t/GnomeSound
	* MANIFEST: Add a test for GnomeSound.  It's not run during make
	test though, because we can't be sure there's a sound server
	running.

	* t/GnomeConfig.t: Test drop_all.

	* t/GnomeIconList.t: Test icon_is_visible and get_icon_at.

	* t/GnomeThumbnail.t: Use a version check for has_uri and is_valid
	instead of the unconditional skip now that the bug has been fixed.

	* t/GnomePasswordDialog.t
	* xs/GnomePasswordDialog.xs: Bind and test
	set_show_userpass_buttons and anon_selected.

	* xs/GnomeColorPicker.xs
	* xs/GnomeEntry.xs
	* xs/GnomeFontPicker.xs
	* xs/GnomeIconTheme.xs